--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
             <div class="info-box mb-4">
               <i class="bx bx-envelope"></i>
               <h3>E-mail</h3>
-              <p>coluco@example.com</p>  <!-- mascarar p / controladoria@medin.com.br-->
+              <p>medicos.coluco@gmail.com</p>  <!-- mascarar p / controladoria@medin.com.br-->
             </div>
           </div>
 
