--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
             <div class="info-box mb-4">
               <i class="bx bx-envelope"></i>
               <h3>E-mail</h3>
-              <p>medicos.coluco@gmail.com</p>  <!-- mascarar p / controladoria@medin.com.br-->
+              <p>medicos.coluco@gmail.com</p> 
             </div>
           </div>
 
@@ -435,10 +435,6 @@
             CRM: 23.220
           </div>
           <div class="credits">
-            <!-- All the links in the footer should remain intact. -->
-            <!-- You can delete the links only if you purchased the pro version. -->
-            <!-- Licensing information: https://bootstrapmade.com/license/ -->
-            <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/techie-free-skin-bootstrap-3/ -->
             Designed by
             <a href="https://rafahmarinho.github.io">@RafahMarinho</a>
             from company SoftCreare.
