fix footer credits part

--- a/index.html
+++ b/index.html
@@ -435,9 +435,10 @@
             CRM: 23.220
           </div>
           <div class="credits">
-            Designed by
-            <a href="https://rafahmarinho.github.io">@RafahMarinho</a>
-            from company SoftCreare.
+            Designed by 
+        <a target="_blank" href="https://rafahmarinho.github.io">@RafahMarinho</a>
+        from 
+        <a target="_blank" href="https://rcodeagency.com.br"> RCode Agency </a>.
           </div>
         </div>
         <div class="social-links text-center text-md-right pt-3 pt-md-0">
