--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
               <h3>MEDIN</h3>
               <p><a href="https://medin.com.br/">medin.com.br</a></p>
               <h3>Centro Auditivo Medin</h3>
-              <p><a href="https://centroauditivomedin.com.br/">medin.com.br</a></p>
+              <p><a href="https://centroauditivomedin.com.br/">centroauditivomedin.com.br</a></p>
             </div>
           </div>
 
